turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:3: error: not found: value righ
    forward(100); backward(100); righ(1)
                                 ^