turtleart.diskfourth.DiskFourth.scala.code
override def run() {
  for (i<- 1 to 90) {
    forward(100); backward(100); righ(1)
  }
}